apps/cyberchef/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberchef
  namespace: cyberchef
  labels:
    app.kubernetes.io/name: cyberchef
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: cyberchef
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cyberchef
    spec:
      containers:
      - name: cyberchef
        image: mpepping/cyberchef:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
