apps/cyberchef/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  namespace: cyberchef
spec:
  selector:
    app.kubernetes.io/name: cyberchef
  ports:
  - port: 80
    targetPort: 8000
