apps/cyberchef/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyberchef
  namespace: cyberchef
  annotations:
    cert-manager.io/cluster-issuer: lan-ca-issuer
spec:
  rules:
  - host: cyberchef.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cyberchef
            port:
              number: 80
  tls:
  - hosts:
    - cyberchef.lab
    secretName: cyberchef-tls
